--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cosmic-settings (0.1.0ubuntu1) noble; urgency=medium
+
+  * Update to noble
+
+ -- Aaron Honeycutt <aaron@system76.com>  Fri, 22 Mar 2024 15:25:16 -0600
+
 cosmic-settings (0.1.0) jammy; urgency=medium
 
   * Project in development
