--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cosmic-settings (0.1.0ubuntu2) noble; urgency=medium
+
+  * Resync with master
+
+ -- Aaron Honeycutt <aaron@system76.com>  Fri, 29 Mar 2024 11:29:55 -0600
+
 cosmic-settings (0.1.0ubuntu1) noble; urgency=medium
 
   * Update to noble
