--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cosmic-settings (0.1.0ubuntu3) noble; urgency=medium
+
+  * Resync
+
+ -- Aaron Honeycutt <aaron@system76.com>  Fri, 05 Apr 2024 10:47:22 -0600
+
 cosmic-settings (0.1.0ubuntu2) noble; urgency=medium
 
   * Resync with master
